--- a/scripts/atstest.in
+++ b/scripts/atstest.in
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
 
 source @CMAKE_INSTALL_PREFIX@/.venv/bin/activate
-/usr/gapps/Spheral/bin/lcats -e @CMAKE_INSTALL_PREFIX@/.venv/bin/python2.7 "$@"
+#/usr/gapps/Spheral/bin/lcats -e @CMAKE_INSTALL_PREFIX@/.venv/bin/python2.7 "$@"
 deactivate
